Added he Enum and proper values